<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrmDaftar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nim"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nama"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txt_telepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telepon"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <RadioGroup
                android:id="@+id/rd_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/laki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/laki" />

                <RadioButton
                    android:id="@+id/puan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/puan" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobi" />

            <CheckBox
                android:id="@+id/makan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/makan" />

            <CheckBox
                android:id="@+id/travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel" />

            <CheckBox
                android:id="@+id/membaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/membaca" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/buttongroup"
            android:layout_below="@id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear" />
            </TableRow>

        </TableLayout>

        <Button
            android:layout_below="@id/buttongroup"
            android:id="@+id/btn_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_data" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>